fix: wrap text on overflow

--- a/src/app.scss
+++ b/src/app.scss
@@ -22,6 +22,7 @@ body {
 
 * {
     box-sizing: border-box;
+    overflow-wrap: anywhere;
 }
 
 a {
